[package]
name = "rofd"
version = "0.1.0"
edition = "2021"
description = "A OFD parser and renderer lib."
authors = ["HualetWang <hualet@hualet.org>"]
repository = "https://github.com/hualet/rofd"
license = "MIT"

[dependencies]
cairo-rs = { version = "0.20.7", features = ["png"] }
env_logger = "0.11.6"
log = { version = "0.4.25", features = ["kv"] }
serde = { version = "1.0.217", features = ["derive"] }
serde-xml-rs = "0.6.0"
zip = "2.2.2"

[dependencies.gtk]
version = "0.9.5"
package ="gtk4"
features = ["v4_14"]