[package]
name = "ofd2png"
version = "1.0.0"
edition = "2024"
description = "Render ODF File To PNG"
authors = ["xuyd <sssxyd@gmail.com>"]
repository = "https://github.com/hualet/rofd"
license = "LGPL-2.1-only"

[dependencies]
cairo-rs = { version = "0.7.0", features = ["png"] }
env_logger = "0.11.7"
log = { version = "0.4.26", features = ["kv"] }
serde = {version = "1.0.219", features = ["derive", "std"]}
serde-xml-rs = "0.6.0"
serde_json = "1.0.140"
zip = "2.4.2"